# linux_kernel_hooking_ebpf

./: Cargo.toml  README.md  README_IT.md
deamon/: Cargo.toml
deamon/src/: main.rs
ebpf-hook/: Cargo.toml  requirements & build
ebpf-hook/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
